# synthetic-cli

./: README.md  pyproject.toml  requirements.txt
synthetic-cli/: __main__.py  cli.py
synthetic-cli/commands/: generate.py
synthetic-cli/config/: models.py
synthetic-cli/tui/: app.py
synthetic_cli/: __init__.py  __main__.py  cli.py
synthetic_cli/commands/: generate.py
synthetic_cli/config/: models.py
synthetic_cli/tui/: app.css  app.py
synthetic_cli/tui/screens/: __init__.py  categories.py  examples.py  generation.py  label_description.py  labels.py  model_selection.py  output_settings.py  summary.py  token.py  use_case.py  welcome.py
